--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
+ul {
+    padding: 0;
+    list-style-position: inside;
+}
+
 main {
     margin-top: 5rem;
     display: flex;
@@ -127,7 +132,8 @@ main {
     align-items: center;
     justify-content: center;
     grid-area: japanese; 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 40px;
     font-weight: bold;
     margin: 10px;
     border: 1px;
@@ -141,7 +147,7 @@ main {
     padding-top: 10px;
     margin-bottom: 0px;
     grid-area: japanese-reading; 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;;
     font-weight: bold;
     text-align: start;
     margin: 10px;
@@ -150,7 +156,6 @@ main {
 .definitions { 
     grid-area: definitions; 
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
     text-align: start;
     margin: 10px;
     margin-top: 0px;
@@ -168,4 +173,9 @@ main {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
+}
+
+#search-text {
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 30px;
 }
