Disable autocomplete in main form

--- a/public/results.hbs
+++ b/public/results.hbs
@@ -15,7 +15,7 @@
     <main>
         <div id="main-sidebar">
             <div id="search-div">
-                <form id="search-form">
+                <form id="search-form" autocomplete="off">
                     <input id="search-text" type="text" name="word" required>
                     <button id="search-button">Search</button>
                 </form>
